@@ -327,7 +327,7 @@ class ProductSearchView(ModelView):
         products = Product.objects.filter(Q(outer_id=q)|Q(name__contains=q),status__in=(pcfg.NORMAL,pcfg.REMAIN))
         
         prod_list = [(prod.outer_id,prod.pic_path,prod.name,prod.cost,prod.collect_num,prod.created,[(sku.outer_id,sku.properties_name) for sku in 
-                    prod.prod_skus.filter(status__in=(pcfg.NORMAL,pcfg.REMAIN))]) for prod in products]
+                    prod.pskus.order_by('-created')]) for prod in products]
         
         return prod_list
 
